; ModuleID = '/home/carl/AnghaBench/git/builtin/extr_log.c_print_commit.c'
source_filename = "/home/carl/AnghaBench/git/builtin/extr_log.c_print_commit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.strbuf = type { i8* }
%struct.commit = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }

@.str = private unnamed_addr constant [7 x i8] c"%c %s\0A\00", align 1
@STRBUF_INIT = common dso_local global %struct.strbuf zeroinitializer, align 8
@CMIT_FMT_ONELINE = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [10 x i8] c"%c %s %s\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8, %struct.commit*, i32, i32, i32*)* @print_commit to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @print_commit(i8 signext %0, %struct.commit* %1, i32 %2, i32 %3, i32* %4) #0 {
  %6 = alloca i8, align 1
  %7 = alloca %struct.commit*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32*, align 8
  %11 = alloca %struct.strbuf, align 8
  store i8 %0, i8* %6, align 1
  store %struct.commit* %1, %struct.commit** %7, align 8
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  store i32* %4, i32** %10, align 8
  %12 = load i32, i32* %8, align 4
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %23, label %14

14:                                               ; preds = %5
  %15 = load i32*, i32** %10, align 8
  %16 = load i8, i8* %6, align 1
  %17 = load %struct.commit*, %struct.commit** %7, align 8
  %18 = getelementptr inbounds %struct.commit, %struct.commit* %17, i32 0, i32 0
  %19 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %18, i32 0, i32 0
  %20 = load i32, i32* %9, align 4
  %21 = call i8* @find_unique_abbrev(i32* %19, i32 %20)
  %22 = call i32 (i32*, i8*, i8, i8*, ...) @fprintf(i32* %15, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i64 0, i64 0), i8 signext %16, i8* %21)
  br label %39

23:                                               ; preds = %5
  %24 = bitcast %struct.strbuf* %11 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 8 %24, i8* align 8 bitcast (%struct.strbuf* @STRBUF_INIT to i8*), i64 8, i1 false)
  %25 = load i32, i32* @CMIT_FMT_ONELINE, align 4
  %26 = load %struct.commit*, %struct.commit** %7, align 8
  %27 = call i32 @pp_commit_easy(i32 %25, %struct.commit* %26, %struct.strbuf* %11)
  %28 = load i32*, i32** %10, align 8
  %29 = load i8, i8* %6, align 1
  %30 = load %struct.commit*, %struct.commit** %7, align 8
  %31 = getelementptr inbounds %struct.commit, %struct.commit* %30, i32 0, i32 0
  %32 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %31, i32 0, i32 0
  %33 = load i32, i32* %9, align 4
  %34 = call i8* @find_unique_abbrev(i32* %32, i32 %33)
  %35 = getelementptr inbounds %struct.strbuf, %struct.strbuf* %11, i32 0, i32 0
  %36 = load i8*, i8** %35, align 8
  %37 = call i32 (i32*, i8*, i8, i8*, ...) @fprintf(i32* %28, i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.1, i64 0, i64 0), i8 signext %29, i8* %34, i8* %36)
  %38 = call i32 @strbuf_release(%struct.strbuf* %11)
  br label %39

39:                                               ; preds = %23, %14
  ret void
}

declare dso_local i32 @fprintf(i32*, i8*, i8 signext, i8*, ...) #1

declare dso_local i8* @find_unique_abbrev(i32*, i32) #1

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #2

declare dso_local i32 @pp_commit_easy(i32, %struct.commit*, %struct.strbuf*) #1

declare dso_local i32 @strbuf_release(%struct.strbuf*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
